--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
+    "@react-three/fiber": "^7.0.21",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-three-fiber": "^6.0.13",
+    "react-use-gesture": "^9.1.3",
     "resizable-panels-react": "^2.0.8",
+    "three": "^0.135.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
